# FK_UNOT_Urs.psd

./: .env.example  .gitattributes  .gitignore  CONTRIBUTING.md  PHASE4_SCOPING.md  PROJECT_DESIGN.md  README.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docker-publish.yml
apps/api-gateway/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  drizzle.config.ts  openapi.yaml  package-lock.json  package.json
apps/asset-service/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  drizzle.config.ts  package-lock.json  package.json
apps/blockchain-svc/: .env.example  Dockerfile  INTEGRATION.md  docker-entrypoint.sh  package-lock.json  package.json
apps/delivery-gateway/: .env.example  Cargo.toml  Dockerfile  README.md
apps/delivery-gateway/src/: crawlers.rs  enumeration.rs  honeypot.rs  lib.rs  main.rs  rate_limit.rs  signing.rs
apps/delivery-gateway/tests/: integration.rs
apps/detection-svc/: .env.example  .gitignore  Dockerfile  README.md  RUNBOOK.md  requirements.txt  server.py
apps/protection-svc/: Dockerfile  INTEGRATION.md  jobs_db.py  orchestrate.py  remote_gpu.py  (+1 more)
apps/protection-svc/rust-core/: .gitignore  Cargo.toml  README.md
apps/protection-svc/rust-core/examples/: debug_keys.rs
apps/protection-svc/rust-core/src/: c2pa_manifest.rs  dct.rs  lib.rs  main.rs  robustness.rs  variants.rs  watermark.rs
apps/protection-svc/rust-core/tests/: c2pa_integration.rs  robustness_integration.rs
contracts/: .env.example  .gitignore  DEPLOYMENTS.md  README.md  docker-deploy.sh  foundry.toml
(+183 files in other folders)
