[package]
name = "delivery-gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.9"
dashmap = "6.2.1"
hex = "0.4.3"
hmac = "0.13.0"
http = "1.4.2"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = { version = "1.52.3", features = ["full"] }

[dev-dependencies]
http-body-util = "0.1.4"
tower = { version = "0.5.3", features = ["util"] }
wiremock = "0.6.5"
