[package]
name = "rust-core"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"
clap = { version = "4", features = ["derive"] }
c2pa = { version = "0.89", default-features = false, features = ["rust_native_crypto"] }
rcgen = "0.13"
ed25519-dalek = { version = "2", features = ["pkcs8"] }
serde_json = "1"

[dev-dependencies]
x509-parser = "0.18"
hex = "0.4"
